--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,14 @@
 			}
 
 			body {
-				margin-left: 10%;
-				margin-top: 10%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
 			}
 		</style>
 	</head>
-	<body></body>
+	<body>
+		<h1>Fireworks - PIXI.js</h1>
+	</body>
 </html>
